Import localisations from Crowdin

--- a/Vienna Help/Resources/de.lproj/keyboard.html
+++ b/Vienna Help/Resources/de.lproj/keyboard.html
@@ -25,7 +25,7 @@
     </tr>
     <tr>
       <td width="115">f</td>
-      <td>Opens the filter bar and puts the focus on the filter search field.</td>
+      <td>Öffnet die Filterleiste und setzt den Eingabefokus auf ihr Suchfeld.</td>
     </tr>
     <tr>
       <td>h</td>
@@ -33,7 +33,7 @@
     </tr>
     <tr>
       <td>k</td>
-      <td>Marks the current folder read.</td>
+      <td>Markiert den aktuellen Ordner als gelesen.</td>
     </tr>
     <tr>
       <td>m</td>
@@ -41,11 +41,11 @@
     </tr>
     <tr>
       <td>b</td>
-      <td>Moves to the first unread article.</td>
+      <td>Zum ersten ungelesenen Artikel gehen.</td>
     </tr>
     <tr>
       <td>n</td>
-      <td>Moves to the next unread article.</td>
+      <td>Zum nächsten ungelesenen Artikel gehen.</td>
     </tr>
     <tr>
       <td>r <i>oder</i> u</td>
@@ -65,7 +65,7 @@
     </tr>
     <tr>
       <td>Linkspfeil</td>
-      <td>Moves the focus to the folder list if it is currently in the article list.</td>
+      <td>Setzt den Fokus auf die Ordnerliste, falls er sich aktuell auf der Artikelliste befindet.</td>
     </tr>
     <tr>
       <td>Leertaste</td>
@@ -85,11 +85,11 @@
     </tr>
     <tr>
       <td>Wahltaste-Klick</td>
-      <td>Open the clicked link, overriding your preference for opening links in external browser.</td>
+      <td>Öffnet den angeklickten Link, ungeachtet der Einstellung, ob Links im externen Browser geöffnet werden sollen.</td>
     </tr>
     <tr>
       <td>Umschalt-Befehl-B</td>
-      <td>Opens the filter bar.</td>
+      <td>Öffnet die Filterleiste.</td>
     </tr>
     <tr>
       <td>Befehl-N</td>
@@ -97,19 +97,19 @@
     </tr>
     <tr>
       <td>Umschalt-Befehl-G</td>
-      <td>Create a group folder.</td>
+      <td>Erstellt einen Gruppenordner.</td>
     </tr>
     <tr>
       <td>Umschalt-Befehl-F</td>
-      <td>Create a smart folder.</td>
+      <td>Erstellt einen intelligenten Ordner.</td>
     </tr>
     <tr>
       <td>Umschalt-Befehl-E</td>
-      <td>Edit the selected folder URL or edit a smart folder criteria.</td>
+      <td>Bearbeitet die URL oder die Filterkriterien des gewählten Ordners.</td>
     </tr>
     <tr>
       <td>Umschalt-Befehl-D</td>
-      <td>Delete the selected folder.</td>
+      <td>Löscht den ausgewählten Ordner.</td>
     </tr>
     <tr>
       <td>Befehl-C</td>
