--- a/Vienna Help/Resources/sv.lproj/keyboard.html
+++ b/Vienna Help/Resources/sv.lproj/keyboard.html
@@ -3,305 +3,305 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Keyboard Shortcuts</title>
+  <title>Kortkommandon</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Discover keyboard shortcuts for common commands in Vienna." />
+  <meta name="description" content="Upptäck kortkommandon för vanliga kommandon i Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Keyboard Shortcuts</span>
-  <p>You can use your keyboard to quickly accomplish many tasks in Vienna. To find the shortcuts for common commands, look in the menus (or see the list at the bottom of this page). Many items in Vienna such as the folder pane and the article list pane also have contextual menus. To see a contextual menu, press the Control key and click the item.</p>
-  <p>To do an action, press the shortcut keys indicated below.</p>
+  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Kortkommandon</span>
+  <p>Du kan använda ditt tangentbord för att snabbt utföra många uppgifter i Vienna. För att hitta genvägarna för vanliga kommandon, titta i menyerna (eller se listan längst ner på denna sida). Många objekt i Vienna som mapplistan och artikellistan har också kontextmenyer. För att se en kontextmeny, tryck på Ctrl-tangenten och klicka på objektet.</p>
+  <p>För att utföra en åtgärd, tryck på kortkommandot som anges nedan.</p>
   <table width="662" border="0" cellspacing="0" id="table1" cellpadding="8">
     <tr>
-      <td width="215" class="greyed"><b>Key</b></td>
-      <td width="462" class="greyed"><b>Action</b></td>
+      <td width="215" class="greyed"><b>Tangent</b></td>
+      <td width="462" class="greyed"><b>Åtgärd</b></td>
     </tr>
   </table>
   <table width="662" border="0" cellspacing="10">
     <tr>
-      <td width="200"><b>Single Key Shortcuts</b></td>
+      <td width="200"><b>Enkelt kortkommando</b></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
       <td width="115">f</td>
-      <td>Opens the filter bar and puts the focus on the filter search field.</td>
+      <td>Öppnar filterfältet och sätter fokus på filtersökfältet.</td>
     </tr>
     <tr>
       <td>h</td>
-      <td>Puts the focus on the search field.</td>
+      <td>Sätter fokus på sökfältet.</td>
     </tr>
     <tr>
       <td>k</td>
-      <td>Marks the current folder read.</td>
+      <td>Markerar nuvarande mapp som läst.</td>
     </tr>
     <tr>
       <td>m</td>
-      <td>Toggles the selected articles flagged or unflagged.</td>
+      <td>Växlar valda artiklar som flaggad eller oflaggad.</td>
     </tr>
     <tr>
       <td>b</td>
-      <td>Moves to the first unread article.</td>
+      <td>Hoppar till första olästa artikel.</td>
     </tr>
     <tr>
       <td>n</td>
-      <td>Moves to the next unread article.</td>
+      <td>Hoppar till nästa olästa artikel.</td>
     </tr>
     <tr>
-      <td>r <i>or</i> u</td>
-      <td>Toggles the selected articles read and unread.</td>
+      <td>r <i>eller</i> u</td>
+      <td>Växlar valda artiklar som lästa eller olästa.</td>
     </tr>
     <tr>
       <td>s</td>
-      <td>Marks the current folder read then skips to the next folder with unread articles.</td>
+      <td>Markerar nuvarande mapp som läst och hoppar sedan till nästa mapp med olästa artiklar.</td>
     </tr>
     <tr>
-      <td>&lt; or ,</td>
-      <td>Displays the previous viewed article or web page.</td>
+      <td>&lt; eller ,</td>
+      <td>Visar föregående sedd artikel eller webbsida.</td>
     </tr>
     <tr>
-      <td>&gt; or .</td>
-      <td>Displays the next viewed article or web page.</td>
+      <td>&gt; eller .</td>
+      <td>Visar nästa sedd artikel eller webbsida.</td>
     </tr>
     <tr>
-      <td>Left</td>
-      <td>Moves the focus to the folder list if it is currently in the article list.</td>
+      <td>Vänster</td>
+      <td>Flyttar fokus till mapplistan om den för närvarande är i artikellistan.</td>
     </tr>
     <tr>
-      <td>Spacebar</td>
-      <td>Moves to the next unread article unless the current article has more text to scroll in which case it scrolls the current article up one page.</td>
+      <td>Mellanslag</td>
+      <td>Flyttar till nästa olästa artikel om inte nuvarande artikel har mer text att skrolla, isåfall skrollas nuvarande artikel upp en sida.</td>
     </tr>
     <tr>
-      <td>Enter/Return</td>
-      <td>Opens the selected article's original web page.</td>
+      <td>Enter/Retur</td>
+      <td>Öppnar vald artikels ursprungliga webbsida.</td>
     </tr>
     <tr>
-      <td>Delete/Backspace</td>
-      <td>Moves the selected articles to the Trash folder. If this key is used in the Trash folder, the selected articles are permanently deleted.</td>
+      <td>Radera/Backsteg</td>
+      <td>Flyttar valda artiklar till Papperskorgen. Om denna tangent används i Papperskorgen, tas de valda artiklarna bort permanent.</td>
     </tr>
     <tr>
-      <td width="200"><b>General Shortcuts</b></td>
+      <td width="200"><b>Generella kortkommandon</b></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>Alt-Click</td>
-      <td>Open the clicked link, overriding your preference for opening links in external browser.</td>
+      <td>Alt-klick</td>
+      <td>Öppna den klickade länken och åsidosätt din inställning för att öppna länkar i extern webbläsare.</td>
     </tr>
     <tr>
-      <td>Shift-Command-B</td>
-      <td>Opens the filter bar.</td>
+      <td>Skift-kommando-B</td>
+      <td>Öppnar filterfältet.</td>
     </tr>
     <tr>
-      <td>Command-N</td>
-      <td>Create a new subscription.</td>
+      <td>Kommando-N</td>
+      <td>Skapa ny RSS-prenumeration.</td>
     </tr>
     <tr>
-      <td>Shift-Command-G</td>
-      <td>Create a group folder.</td>
+      <td>Skift-kommando-G</td>
+      <td>Skapa en gruppmapp.</td>
     </tr>
     <tr>
-      <td>Shift-Command-F</td>
-      <td>Create a smart folder.</td>
+      <td>Skift-kommando-F</td>
+      <td>Skapa en smart mapp.</td>
     </tr>
     <tr>
-      <td>Shift-Command-E</td>
-      <td>Edit the selected folder URL or edit a smart folder criteria.</td>
+      <td>Skift-kommando-E</td>
+      <td>Redigera vald mapp URL eller redigera kriterier för smart mapp.</td>
     </tr>
     <tr>
-      <td>Shift-Command-D</td>
-      <td>Delete the selected folder.</td>
+      <td>Skift-kommando-D</td>
+      <td>Radera vald mapp.</td>
     </tr>
     <tr>
-      <td>Command-C</td>
-      <td>Copies the selected text to the clipboard. If the focus is on an article, it copies the article details to the clipboard.</td>
+      <td>Kommando-C</td>
+      <td>Kopierar den valda texten till urklipp. Om fokus är på en artikel, så kopieras artikelns detaljer till urklipp.</td>
     </tr>
     <tr>
-      <td>Command-H</td>
-      <td>Hides the Vienna main window.</td>
+      <td>Kommando-H</td>
+      <td>Gömmer Viennas huvudfönster.</td>
     </tr>
     <tr>
-      <td>Alt-Command-H</td>
-      <td>Hides all other application windows but keeps the Vienna main window visible.</td>
+      <td>Alt-kommando-H</td>
+      <td>Gömmer alla andra applikationsfönster men behåller Viennas huvudfönster synligt.</td>
     </tr>
     <tr>
-      <td>Command-I</td>
-      <td>Displays the Info window for the selected folder.</td>
+      <td>Kommando-I</td>
+      <td>Visar infofönstret för vald mapp.</td>
     </tr>
     <tr>
-      <td>Command-L</td>
-      <td>Puts the focus on the address bar of the current tab. Or if no browser is open and has the focus, opens a new tab and puts the focus on the address bar.</td>
+      <td>Kommando-L</td>
+      <td>Lägger fokus på adressfältet för den aktuella fliken. Eller om ingen webbläsare är öppen och har fokus, öppnar en ny flik och lägger fokus på adressfältet.</td>
     </tr>
     <tr>
-      <td>Shift-Command-N</td>
-      <td>Rename the selected folder.</td>
+      <td>Skift-kommando-N</td>
+      <td>Byt namn på vald mapp.</td>
     </tr>
     <tr>
-      <td>Command-R</td>
-      <td>Refreshes all subscriptions.</td>
+      <td>Kommando-R</td>
+      <td>Uppdaterar alla prenumerationer.</td>
     </tr>
     <tr>
-      <td>Shift-Command-R</td>
-      <td>Refresh only those subscriptions selected in the folder list.</td>
+      <td>Skift-kommando-R</td>
+      <td>Uppdaterar bara de prenumerationer som är valda i mapplistan.</td>
     </tr>
     <tr>
-      <td>Control-Command-S</td>
-      <td>Stops any active refresh.</td>
+      <td>Kontroll-kommando-S</td>
+      <td>Stoppar aktiva uppdateringar.</td>
     </tr>
     <tr>
-      <td>Command-P</td>
-      <td>Print the selected articles.</td>
+      <td>Kommando-P</td>
+      <td>Skriv ut valda artiklar.</td>
     </tr>
     <tr>
-      <td>Shift-Command-P</td>
-      <td>Brings up the Page Setup panel.</td>
+      <td>Skift-kommando-P</td>
+      <td>Visar panelen Utskriftsformat.</td>
     </tr>
     <tr>
-      <td>Command-Q</td>
-      <td>Exit Vienna.</td>
+      <td>Kommando-Q</td>
+      <td>Avsluta Vienna.</td>
     </tr>
     <tr>
-      <td>Command-T</td>
-      <td>Opens a new tab and puts the focus on the address bar.</td>
+      <td>Kommando-T</td>
+      <td>Öppnar en ny flik och flyttar fokus till adressfältet.</td>
     </tr>
     <tr>
-      <td>Command-U</td>
-      <td>Moves to the next unread article.</td>
+      <td>Kommando-U</td>
+      <td>Hoppar till nästa olästa artikel.</td>
     </tr>
     <tr>
-      <td>Command-Z</td>
-      <td>Undoes the last action, if it can be undone.</td>
+      <td>Kommando-Z</td>
+      <td>Ångrar senaste åtgärd, om den kan ångras.</td>
     </tr>
     <tr>
-      <td>Command-/</td>
-      <td>Toggles the status bar on or off.</td>
+      <td>Kommando-/</td>
+      <td>Växlar statusfältet på eller av.</td>
     </tr>
     <tr>
-      <td>Command-+</td>
-      <td>Increases the size of the text in the current article or web page.</td>
+      <td>Kommando-+</td>
+      <td>Ökar storleken på texten för nuvarande artikel eller webbsida.</td>
     </tr>
     <tr>
-      <td>Command--</td>
-      <td>Decreases the size of the text in the current article or web page.</td>
+      <td>Kommando--</td>
+      <td>Minskar storleken på texten för nuvarande artikel eller webbsida.</td>
     </tr>
     <tr>
-      <td>Command-,</td>
-      <td>Opens the Vienna preferences panel.</td>
+      <td>Kommando-,</td>
+      <td>Öppnar Viennas inställningar.</td>
     </tr>
     <tr>
-      <td>Alt-Command-Backspace</td>
-      <td>Empties the trash folder after prompting for confirmation.</td>
+      <td>Alt-kommando-backsteg</td>
+      <td>Tömmer papperskorgen efter frågat om bekräftelse.</td>
     </tr>
     <tr>
-      <td>Command-?</td>
-      <td>Displays the Vienna help book.</td>
+      <td>Kommando-?</td>
+      <td>Visar Viennas hjälp.</td>
     </tr>
     <tr>
-      <td><b>Articles Shortcuts</b></td>
+      <td><b>Kortkommandon för artiklar</b></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>Alt-Enter/Alt-Return</td>
-      <td>Opens the selected article's original web page, overriding your preference for opening links in external browser.</td>
+      <td>Alt-enter/Alt-retur</td>
+      <td>Öppnar den valda artikelns ursprungliga webbsida och åsidosätter din inställning för öppning av länkar i extern webbläsare.</td>
     </tr>
     <tr>
-      <td>Shift-Command-Z</td>
-      <td>Redo the last action, if it was previously undone.</td>
+      <td>Skift-kommando-Z</td>
+      <td>Gör om senaste åtgärd, om den tidigare var ångrad.</td>
     </tr>
     <tr>
-      <td>Shift-Command-M</td>
-      <td>Flags the selected articles.</td>
+      <td>Skift-kommando-M</td>
+      <td>Flaggar valda artiklar.</td>
     </tr>
     <tr>
-      <td>Shift-Command-U</td>
-      <td>Marks the selected articles read.</td>
+      <td>Skift-kommando-U</td>
+      <td>Markerar valda artiklar som lästa.</td>
     </tr>
     <tr>
-      <td>Alt-Command-S</td>
-      <td>Uses your default mail application to send a link to the current article by e-mail.</td>
+      <td>Alt-kommando-S</td>
+      <td>Använder din standard e-postapplikation för att skicka en länk till nuvarande artikel via e-post.</td>
     </tr>
     <tr>
-      <td>Shift-Command-S</td>
-      <td>Marks the current folder read then skips to the next folder with unread articles.</td>
+      <td>Skift-kommando-S</td>
+      <td>Markerar nuvarande mapp som läst och hoppar sedan till nästa mapp med olästa artiklar.</td>
     </tr>
     <tr>
-      <td>Shift-Command-O</td>
-      <td>Restores an article from the trash back to its original folder.</td>
+      <td>Skift-kommando-O</td>
+      <td>Återställer en artikel från papperskorgen tillbaka till dess ursprungliga mapp.</td>
     </tr>
     <tr>
-      <td>Shift-Command-K</td>
-      <td>Marks all articles in the selected folders read.</td>
+      <td>Skift-kommando-K</td>
+      <td>Markerar alla artiklar i de valda mapparna som lästa.</td>
     </tr>
     <tr>
-      <td>Alt-Command-K</td>
-      <td>Marks all articles in all folders read.</td>
+      <td>Alt-kommando-K</td>
+      <td>Markerar alla artiklar i alla mappar som lästa.</td>
     </tr>
     <tr>
-      <td><b>Window Shortcuts</b></td>
+      <td><b>Kortkommandon för fönster</b></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td>Command-W</td>
-      <td>Closes the active tab window if one is open. Otherwise if no tabs are open, this closes the Vienna window.</td>
+      <td>Kommando-W</td>
+      <td>Stänger det aktiva flikfönstret om något är öppet. Annars om inga flikar är öppna, så stängs Viennas fönster.</td>
     </tr>
     <tr>
-      <td>Alt-Command-W</td>
-      <td>Closes all tab windows. Note that this command replaces the Close Tab command on the File menu when the Alt key is held down.</td>
+      <td>Alt-kommando-W</td>
+      <td>Stänger alla flikfönster. Observera att det här kommandot ersätter kommandot Stäng flik på Arkiv-menyn när Alt-tangenten hålls nedtryckt.</td>
     </tr>
     <tr>
-      <td>Alt-Command-Left</td>
-      <td>Displays the previous tab window.</td>
+      <td>Alt-kommando-vänster</td>
+      <td>Visar föregående flikfönster.</td>
     </tr>
     <tr>
-      <td>Alt-Command-Right</td>
-      <td>Displays the next tab window.</td>
+      <td>Alt-kommando-höger</td>
+      <td>Visar nästa flikfönster.</td>
     </tr>
     <tr>
-      <td>Command-Y</td>
-      <td>Opens the article list tab.</td>
+      <td>Kommando-Y</td>
+      <td>Öppnar fliken för artikellistan.</td>
     </tr>
     <tr>
-      <td>Command-M</td>
-      <td>Minimizes the Vienna window to the dock.</td>
+      <td>Kommando-M</td>
+      <td>Minimerar Viennas fönster till Dock.</td>
     </tr>
     <tr>
-      <td>Command-0</td>
-      <td>Displays the activity log viewer window.</td>
+      <td>Kommando-0</td>
+      <td>Visar aktivitetsfönstret.</td>
     </tr>
     <tr>
-      <td>Command-1</td>
-      <td>Reopens the Vienna window if it was previously closed.</td>
+      <td>Kommando-1</td>
+      <td>Återöppnar Viennas fönster, om det stängdes tidigare.</td>
     </tr>
     <tr>
-      <td>Command-2</td>
-      <td>Displays the Downloads window.</td>
+      <td>Kommando-2</td>
+      <td>Visar nedladdningsfönstret.</td>
     </tr>
     <tr>
-      <td><b>Browser Window Shortcuts</b></td>
+      <td><b>Kortkommandon för webbläsarfönster</b></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
       <td>Alt-R</td>
-      <td>Reloads the current web page.</td>
+      <td>Laddar om nuvarande webbsida.</td>
     </tr>
     <tr>
-      <td>Command-Period</td>
-      <td>Cancels loading of the current web page.</td>
+      <td>Kommando-punkt</td>
+      <td>Avbryter laddning av nuvarande webbsida.</td>
     </tr>
     <tr>
-      <td>Command-[/Command-Left</td>
-      <td>Goes back to the previous web page.</td>
+      <td>Kommando-[/Kommando-vänster</td>
+      <td>Går tillbaka till föregående webbsida.</td>
     </tr>
     <tr>
-      <td>Command-]/Command-Right</td>
-      <td>Goes forward to the next web page.</td>
+      <td>Kommando-]/Kommando-höger</td>
+      <td>Går framåt till nästa webbsida.</td>
     </tr>
     <tr>
-      <td>Command-F</td>
-      <td>Puts the input focus in the search field. Entering some text here and pressing Enter will search for that text on the current web page.</td>
+      <td>Kommando-F</td>
+      <td>Lägger inmatningsfokus i sökfältet. Om du skriver in lite text här och trycker på Enter kommer du att söka efter den texten på den aktuella webbsidan.</td>
     </tr>
     <tr>
-      <td>Command-G</td>
-      <td>Searches for the next occurrence of the search text on the web page.</td>
+      <td>Kommando-G</td>
+      <td>Söker efter nästa förekomst av söktexten på webbsidan.</td>
     </tr>
   </table>
 </body>
