Import localisations from Crowdin

--- a/Vienna Help/Resources/es.lproj/faq.html
+++ b/Vienna Help/Resources/es.lproj/faq.html
@@ -5,7 +5,7 @@
 <head>
   <title>¿Cómo puedo...?</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Frequently asked questions about Vienna, getting support and troubleshooting steps." />
+  <meta name="description" content="Preguntas frecuentes sobre Vienna, obtención de soporte y pasos para resolver problemas." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -14,11 +14,11 @@
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">He apreciado un problema en Vienna. ¿Cómo informo de ello?</a></li>
     <li><a href="#How_can_I_see_what_happened_when_my_subscriptions_are_refreshed">¿Cómo puedo comprobar si mis suscripciones se han actualizado?</a></li>
-    <li><a href="#How_do_I_subscribe_to_a_feed_requiring_user_authentication">How do I subscribe to a feed requiring user authentication?</a></li>
+    <li><a href="#How_do_I_subscribe_to_a_feed_requiring_user_authentication">¿Cómo me suscribo a un feed que requiere autenticación de usuario?</a></li>
     <li><a href="#How_do_I_move_my_Vienna_database_to_another_folder">¿Cómo puedo mover la base de datos de Vienna a otra carpeta?</a></li>
     <li><a href="#One_of_my_subscriptions_reports_Error_parsing_XML_data_in_feed._What_does_this_mean">Una de mis suscripciones muestra el mensaje «Se ha producido un error al procesar los datos XML de la fuente». ¿Qué significa?</a></li>
     <li><a href="#Is_there_a_shortcut_key_for_going_to_the_next_article_marking_read_etc_">¿Hay alguna función rápida de teclado para pasar al siguiente artículo, marcar como leído, etc?</a></li>
-    <li><a href="#What_do_the_green_dots_mean_in_the_list_of_articles">What do the green dots mean in the list of articles?</a></li>
+    <li><a href="#What_do_the_green_dots_mean_in_the_list_of_articles">¿Qué significan los puntos verdes en la lista de artículos?</a></li>
     <li><a href="#How_do_I_use_Auto_Expire_and_what_does_it_do">¿Cómo puedo utilizar la auto-eliminación de artículos y qué hace?</a></li>
     <li><a href="#How_do_I_create_my_own_styles">¿Cómo puedo crear mis propios estilos?</a></li>
     <li><a href="#How_do_I_create_my_own_scripts">¿Cómo puedo crear mis propios scripts?</a></li>
@@ -31,9 +31,9 @@
   <p>Tenga presente que solventar errores goza de mayor prioridad que incluir nuevas características. En el que caso de que se confirme que su problema es un error reconocido y generalizado se intentará dar una solución en un plazo razonable de tiempo.</p>
   <h2><a id="How_can_I_see_what_happened_when_my_subscriptions_are_refreshed" name="How_can_I_see_what_happened_when_my_subscriptions_are_refreshed">¿Cómo puedo comprobar si mis suscripciones se han actualizado?</a></h2>
   <p>Abra la página de actividad del menú Ventana. La ventana de actividad muestra todas las suscripciones y la situación que tenían la última vez que fueron actualizadas durante la presente sesión. La parte inferior de la ventana de actividad muestra más detalles. Entre éstos se incluyen los encabezados HTTP, que podrían ser útiles para detectar y eliminar fallos. Si el panel de actividades no está visible, puede hacerlo aparecer arrastrando hacia la parte superior la barra inferior de la ventana.</p>
-  <h2><a id="How_do_I_subscribe_to_a_feed_requiring_user_authentication" name="How_do_I_subscribe_to_a_feed_requiring_user_authentication">How do I subscribe to a feed requiring user authentication?</a></h2>
+  <h2><a id="How_do_I_subscribe_to_a_feed_requiring_user_authentication" name="How_do_I_subscribe_to_a_feed_requiring_user_authentication">¿Cómo me suscribo a un feed que requiere autenticación de usuario?</a></h2>
   <p>First, you need to understand that Open Reader services do not provide authentication to a third party server. Vienna will need to have a direct access to a server if it requires authentication. So, when you subscribe, make sure the "Subscribe in Open Reader" checkbox is UNchecked.</p>
-  <p>Then, it is important to know that there are two main methods that servers use to authenticate an user who requests an XML feed :</p>
+  <p>Then, it is important to know that there are two main methods that servers use to authenticate an user who requests an XML feed:</p>
   <ul>
     <li>requiring a username and a password</li>
     <li>or requiring a specific cookie</li>
