--- a/Vienna Help/Resources/es.lproj/keyboard.html
+++ b/Vienna Help/Resources/es.lproj/keyboard.html
@@ -5,7 +5,7 @@
 <head>
   <title>Funciones rápidas de teclado</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Discover keyboard shortcuts for common commands in Vienna." />
+  <meta name="description" content="Descubre los atajos de teclado para los comandos comunes en Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -25,7 +25,7 @@
     </tr>
     <tr>
       <td width="115">f</td>
-      <td>Opens the filter bar and puts the focus on the filter search field.</td>
+      <td>Abre la barra de filtros y se enfoca en el campo de búsqueda del filtro.</td>
     </tr>
     <tr>
       <td>h</td>
@@ -41,11 +41,11 @@
     </tr>
     <tr>
       <td>b</td>
-      <td>Moves to the first unread article.</td>
+      <td>Muestra el primer artículo no leído.</td>
     </tr>
     <tr>
       <td>n</td>
-      <td>Moves to the next unread article.</td>
+      <td>Muestra el siguiente artículo no leído.</td>
     </tr>
     <tr>
       <td>r <i>or</i> u</td>
@@ -64,8 +64,8 @@
       <td>Muestra el siguiente artículo o página web.</td>
     </tr>
     <tr>
-      <td>Left</td>
-      <td>Moves the focus to the folder list if it is currently in the article list.</td>
+      <td>Izquierda</td>
+      <td>Mueve el enfoque a la lista de carpetas si actualmente está en la lista de artículos.</td>
     </tr>
     <tr>
       <td>Barra espaciadora</td>
@@ -85,19 +85,19 @@
     </tr>
     <tr>
       <td>Alt-Click</td>
-      <td>Open the clicked link, overriding your preference for opening links in external browser.</td>
+      <td>Abre el enlace clicado, ignorando tu preferencia por abrir enlaces en un navegador externo.</td>
     </tr>
     <tr>
-      <td>Shift-Command-B</td>
-      <td>Opens the filter bar.</td>
+      <td>Shift-Comando-B</td>
+      <td>Abre la barra de filtros.</td>
     </tr>
     <tr>
       <td>Comando-N</td>
       <td>Crea una nueva suscripción.</td>
     </tr>
     <tr>
-      <td>Shift-Command-G</td>
-      <td>Create a group folder.</td>
+      <td>Shift-Comando-G</td>
+      <td>Crea un grupo de carpetas.</td>
     </tr>
     <tr>
       <td>Shift-Comando-F</td>
@@ -112,24 +112,24 @@
       <td>Elimina la carpeta seleccionada.</td>
     </tr>
     <tr>
-      <td>Command-C</td>
-      <td>Copies the selected text to the clipboard. If the focus is on an article, it copies the article details to the clipboard.</td>
+      <td>Comando-C</td>
+      <td>Copia el texto seleccionado al portapapeles. Si el enfoque está en un artículo, copia los detalles del artículo al portapapeles.</td>
     </tr>
     <tr>
-      <td>Command-H</td>
-      <td>Hides the Vienna main window.</td>
+      <td>Comando-H</td>
+      <td>Oculta la ventana principal de Vienna.</td>
     </tr>
     <tr>
-      <td>Alt-Command-H</td>
-      <td>Hides all other application windows but keeps the Vienna main window visible.</td>
+      <td>Alt-Comando-H</td>
+      <td>Oculta todas las demás ventanas de la aplicación, pero mantiene visible la ventana principal de Vienna.</td>
     </tr>
     <tr>
-      <td>Command-I</td>
-      <td>Displays the Info window for the selected folder.</td>
+      <td>Comando-I</td>
+      <td>Muestra la ventana de información para la carpeta seleccionada.</td>
     </tr>
     <tr>
-      <td>Command-L</td>
-      <td>Puts the focus on the address bar of the current tab. Or if no browser is open and has the focus, opens a new tab and puts the focus on the address bar.</td>
+      <td>Comando-L</td>
+      <td>Coloca el enfoque en la barra de direcciones de la pestaña actual. O, si no hay un navegador abierto y enfocado, abre una nueva pestaña y coloca el enfoque en la barra de direcciones.</td>
     </tr>
     <tr>
       <td>Shift-Comando-N</td>
@@ -144,7 +144,7 @@
       <td>Actualiza únicamente las suscripciones seleccionadas.</td>
     </tr>
     <tr>
-      <td>Control-Command-S</td>
+      <td>Control-Comando-S</td>
       <td>Cancela cualquier actualización que se esté produciendo.</td>
     </tr>
     <tr>
@@ -156,40 +156,40 @@
       <td>Muestra la configuración de página.</td>
     </tr>
     <tr>
-      <td>Command-Q</td>
-      <td>Exit Vienna.</td>
+      <td>Comando-Q</td>
+      <td>Salir de Vienna.</td>
     </tr>
     <tr>
-      <td>Command-T</td>
-      <td>Opens a new tab and puts the focus on the address bar.</td>
+      <td>Comando-T</td>
+      <td>Abre una nueva pestaña y coloca el enfoque en la barra de direcciones.</td>
     </tr>
     <tr>
-      <td>Command-U</td>
+      <td>Comando-U</td>
       <td>Muestra el siguiente artículo no leído.</td>
     </tr>
     <tr>
-      <td>Command-Z</td>
-      <td>Undoes the last action, if it can be undone.</td>
+      <td>Comando-Z</td>
+      <td>Deshace la última acción, si es posible.</td>
     </tr>
     <tr>
-      <td>Command-/</td>
-      <td>Toggles the status bar on or off.</td>
+      <td>Comando-/</td>
+      <td>Activa o desactiva la barra de estado.</td>
     </tr>
     <tr>
-      <td>Command-+</td>
-      <td>Increases the size of the text in the current article or web page.</td>
+      <td>Comando-+</td>
+      <td>Aumenta el tamaño del texto en el artículo o página web actual.</td>
     </tr>
     <tr>
       <td>Comando-Minus</td>
-      <td>Decreases the size of the text in the current article or web page.</td>
+      <td>Disminuye el tamaño del texto en el artículo o página web actual.</td>
     </tr>
     <tr>
-      <td>Command-,</td>
-      <td>Opens the Vienna preferences panel.</td>
+      <td>Comando-,</td>
+      <td>Abre el panel de preferencias de Vienna.</td>
     </tr>
     <tr>
       <td>Alt-Command-Backspace</td>
-      <td>Empties the trash folder after prompting for confirmation.</td>
+      <td>Vacía la carpeta de papelera después de solicitar confirmación.</td>
     </tr>
     <tr>
       <td>Comando-?</td>
@@ -201,11 +201,11 @@
     </tr>
     <tr>
       <td>Alt-Enter/Alt-Return</td>
-      <td>Opens the selected article's original web page, overriding your preference for opening links in external browser.</td>
+      <td>Abre la página web original del artículo seleccionado, ignorando tu preferencia por abrir enlaces en un navegador externo.</td>
     </tr>
     <tr>
-      <td>Shift-Command-Z</td>
-      <td>Redo the last action, if it was previously undone.</td>
+      <td>Shift-Comando-Z</td>
+      <td>Rehace la última acción, si fue deshecha anteriormente.</td>
     </tr>
     <tr>
       <td>Shift-Comando-M</td>
@@ -216,8 +216,8 @@
       <td>Marca como leídos los artículos seleccionados.</td>
     </tr>
     <tr>
-      <td>Alt-Command-S</td>
-      <td>Uses your default mail application to send a link to the current article by e-mail.</td>
+      <td>Alt-Comando-S</td>
+      <td>Utiliza tu aplicación de correo predeterminada para enviar un enlace al artículo actual por correo electrónico.</td>
     </tr>
     <tr>
       <td>Shift-Comando-S</td>
@@ -256,8 +256,8 @@
       <td>Muestra la pestaña siguiente.</td>
     </tr>
     <tr>
-      <td>Command-Y</td>
-      <td>Opens the article list tab.</td>
+      <td>Comando-Y</td>
+      <td>Abre la pestaña de la lista de artículos.</td>
     </tr>
     <tr>
       <td>Comando-M</td>
