--- a/Vienna Help/Resources/fr.lproj/keyboard.html
+++ b/Vienna Help/Resources/fr.lproj/keyboard.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Raccourcis clavier</span>
-  <p>Dans Vienna vous pouvez utiliser votre clavier pour exécuter rapidement beaucoup d'actions. Pour trouver les raccourcis clavier pour les commandes courantes, regardez dans les menus (ou parcourrez la liste en bas de cette page). Beaucoup d'objets dans Vienna, tels que la liste des dossiers ou celle des articles possèdent aussi un menu contextuel. Pour afficher un menu contextuel, pressez la touche "Ctrl" et cliquez sur l'objet.</p>
+  <p>Dans Vienna vous pouvez utiliser votre clavier pour exécuter rapidement beaucoup d'actions. Pour trouver les raccourcis clavier pour les commandes courantes, regardez dans les menus (ou parcourrez la liste en bas de cette page). Beaucoup d'objets dans Vienna, tels que la liste des dossiers ou celle des articles possèdent aussi un menu contextuel. Pour afficher un menu contextuel, pressez la touche "Control" et cliquez sur l'objet.</p>
   <p>Pour réaliser une action, pressez les raccourcis indiqués ci-dessous.</p>
   <table width="662" border="0" cellspacing="0" id="table1" cellpadding="8">
     <tr>
