--- a/Vienna Help/Resources/es.lproj/intro.html
+++ b/Vienna Help/Resources/es.lproj/intro.html
@@ -5,7 +5,7 @@
 <head>
   <title>Introducción a Vienna</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Learn how to get started with Vienna." />
+  <meta name="description" content="Aprende a comenzar con Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -16,14 +16,14 @@
   <p>Si ésta es la primera vez que utiliza Vienna se habrá creado automáticamente una base de datos y añadido a ella algunas suscripciones. Para actualizarlas pulse Comando-T o bien escoja la opción Actualizar todas las suscripciones que se encuentra en el menú Archivo.</p>
   <p>Obviamente, puede suscribirse a todas las fuentes de noticias que usted desee. Hay varias maneras de encontrar fuentes. Cuando navegue por la web busque el <img src="../shared/images/rssfeed.gif" alt="" /> o el icono XML que indica que la página tiene una fuente de noticias asociada a ella. Por lo general, prácticamente todos los servicios de publicación de blogs, por ejemplo LiveJournal o Blogger/Blogspot, incluyen las fuentes RSS como altenativa a la lectura de contenidos en la propia página.</p>
   <p>Si conoce el nombre de un usuario de LiveJournal, Blogger/Blogspot, MSN Spaces or Xanga, Vienna le proporciona una fácil manera de suscribirse a esa fuente. Empiece pulsando Comando-N o bien seleccionando la opción Crear una nueva suscripción en el menú Archivo. En el cuadro de diálogo Crear una nueva suscripción escoja el servicio de publicación de blogs que hay en la lista desplegable e introduzca el nombre de usuario en el campo inferior. Pulse Suscribirse y Vienna añadirá la suscripción a la lista de fuentes. Si en ese momento está conectado a internet automáticamente se iniciará la descarga de los artículos disponibles en la fuente.</p>
-  <p>You can also use Vienna in relation with an account in an Open Reader server. Go into Preferences... / Syncing and tick the "Sync with an Open Reader server" checkbox.<br />
-  Beforehand, think about which feeds you prefer reading through Open Reader and which you'll get through direct access. Vienna will avoid creating duplicates between the two categories, but if you have feeds inside Open Reader which Vienna already fetches directly, you will have discrepancies between your reading lists. So, organize your feeds accordingly.<br />
-  You should take into account these elements :</p>
+  <p>También puedes usar Vienna en relación con una cuenta en un servidor Open Reader. Ve a Preferencias… / Sincronización y marca la casilla ‘Sincronizar con un servidor Open Reader’.<br />
+  Antes de eso, piensa en qué feeds prefieres leer a través de Open Reader y cuáles obtendrás por acceso directo. Vienna evitará crear duplicados entre las dos categorías, pero si tienes feeds dentro de Open Reader que Vienna ya obtiene directamente, tendrás discrepancias entre tus listas de lectura. Así que organiza tus feeds en consecuencia.<br />
+  Debes tener en cuenta estos elementos:</p>
   <ul>
-    <li>Open Reader feeds can be synchronized across multiple devices/applications supporting it</li>
-    <li>Open Reader does not support feeds requiring username/password</li>
-    <li>Fetching feeds directly avoids the Open Reader service as an intermediary between you and the publishing site; for less "popular" feeds, you'll get articles sooner.</li>
-    <li>Generally, directly fetching feeds from their original website generates less network traffic. When the server signals there is no new articles since last fetch, Vienna avoids an useless download.</li>
+    <li>Los feeds de Open Reader se pueden sincronizar en múltiples dispositivos/aplicaciones que lo soporten</li>
+    <li>Open Reader no es compatible con feeds que requieran nombre de usuario y contraseña</li>
+    <li>Obtener feeds directamente evita que el servicio Open Reader actúe como intermediario entre tú y el sitio de publicación; para feeds menos “populares”, recibirás los artículos más rápido.</li>
+    <li>En general, obtener feeds directamente desde su sitio web original genera menos tráfico de red. Cuando el servidor señala que no hay nuevos artículos desde la última obtención, Vienna evita una descarga innecesaria.</li>
   </ul>
   <p>Es muy común actualizar las suscripciones de manera manual. Sin embargo, puede optar por la posibilidad de que Vienna lo haga automáticamente tras un determinado periodo de tiempo. Para ello, diríjase a Preferencias y escoja el intervalo de tiempo deseado en la opción Comprobar si hay nuevos artículos. Tenga en cuenta que Vienna necesita estar ejecutándose -ya sea en segundo plano- para actualizar automáticamente las suscripciones.</p>
   <p>Al leer los artículos pulse la barra espaciadora y así saltará al siguiente artículo no leído de cualquier suscripción. Cada artículo recibe el estado de Leído tras un breve lapso de tiempo. Si prefiere esperar a leer un nuevo artículo para que que se produzca este hecho diríjase a Preferencias. Para marcar de nuevo como no leído un artículo, simplemente pulse la tecla R o seleccione la opción Marcar como no leído disponible en el menú Archivo.</p>
