Tweak the wording in some help book pages

--- a/Vienna Help/Resources/en.lproj/faq.html
+++ b/Vienna Help/Resources/en.lproj/faq.html
@@ -3,13 +3,13 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>How Do I?</title>
+  <title>How do I … in Vienna?</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Frequently asked questions about Vienna, getting support and troubleshooting steps." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">How Do I?</span>
+  <a id="faq-page" name="faq-page"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">How do I … in Vienna?</span>
   <p>Below are some of the more common questions asked about Vienna while it was being pre-release tested. See the <a href="http://www.vienna-rss.com/vienna_faq.html">Official Vienna FAQ Page</a> for these and the latest hints and tips for using Vienna.</p>
   <ul>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">I found a problem with Vienna. How do I report it?</a></li>
