--- a/Vienna Help/Resources/en.lproj/keyboard.html
+++ b/Vienna Help/Resources/en.lproj/keyboard.html
@@ -3,13 +3,13 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Keyboard Shortcuts</title>
+  <title>Keyboard shortcuts in Vienna</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Discover keyboard shortcuts for common commands in Vienna." />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Keyboard Shortcuts</span>
+  <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Keyboard shortcuts in Vienna</span>
   <p>You can use your keyboard to quickly accomplish many tasks in Vienna. To find the shortcuts for common commands, look in the menus (or see the list at the bottom of this page). Many items in Vienna such as the folder pane and the article list pane also have contextual menus. To see a contextual menu, press the Control key and click the item.</p>
   <p>To do an action, press the shortcut keys indicated below.</p>
   <table width="662" border="0" cellspacing="0" id="table1" cellpadding="8">
